@@ -1,3 +1,8 @@
+2015-10-06  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
+	* src/gsad.c (gsad_address_init): Check if IPv6 is supported when
+	setting default listening address.
+
 2015-10-06  Timo Pollmeier <timo.pollmeier@greenbone.net>
 
 	* src/gsad_omp.c (export_many): Use correct subtype parameter name
